<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

    
	<EditText android:layout_width="200dp" android:layout_height="wrap_content"
		  android:hint="@string/username"
		  android:paddingTop="20dp"
		  android:id="@+id/editText_username"
		  android:layout_marginTop="10dp"
		  android:layout_centerHorizontal="true" />

	<EditText android:layout_width="200dp" android:layout_height="wrap_content"
		  android:hint="@string/password"
		  android:inputType="textPassword"
		  android:layout_marginTop="10dp"
		  android:id="@+id/editText_password"
		  android:layout_below="@id/editText_username"
		  android:layout_centerHorizontal="true" />

	<Button android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/login"
		android:layout_below="@id/editText_password"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:id="@+id/button_login"
		android:onClick="button_login_onClick" />
	
	<View
	    android:layout_width="100dp"
	    android:layout_height="1dp"
	    android:id="@+id/view_divider_left"
	    android:layout_below="@id/button_login"
	    android:layout_marginTop="8dp"
	    android:layout_marginRight="5dp"
	    android:layout_toLeftOf="@+id/textView_divider"
	    android:background="@android:color/darker_gray" />
	
	<TextView
	    android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:layout_below="@id/button_login"
	    android:layout_centerHorizontal="true"
	    android:id="@+id/textView_divider"
	    android:text="@string/or" />
	
	<View
	    android:layout_width="100dp"
	    android:layout_height="1dp"
	    android:id="@+id/view_divider_right"
	    android:layout_toRightOf="@id/textView_divider"
	    android:layout_below="@id/button_login"
	    android:layout_marginTop="8dp"
	    android:layout_marginLeft="5dp"
	    android:background="@android:color/darker_gray" />
	
	<Button
	    android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:layout_below="@id/textView_divider"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="10dp"
	    android:id="@+id/button_register"
	    android:text="@string/register" />
	
	
</RelativeLayout>